dockerfile & some changes
